register login profile

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -22,6 +22,8 @@
     <script src="config.js"></script>
 
     <script src="controller/login.controller.client.js"></script>
+    <script src="controller/register.controller.client.js"></script>
+    <script src="controller/profile.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
 </head>
 <body>
