--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -24,7 +24,9 @@
     <script src="controller/login.controller.client.js"></script>
     <script src="controller/register.controller.client.js"></script>
     <script src="controller/profile.controller.client.js"></script>
+    <script src="controller/home.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
+    <script src="service/movie.service.client.js"></script>
 </head>
 <body>
 
