--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -25,8 +25,11 @@
     <script src="controller/register.controller.client.js"></script>
     <script src="controller/profile.controller.client.js"></script>
     <script src="controller/home.controller.client.js"></script>
+    <script src="controller/search.controller.client.js"></script>
+    <script src="controller/movie.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
+    <script src="service/api.service.client.js"></script>
 </head>
 <body>
 
