--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -18,6 +18,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.min.js"></script>
 
+    <link href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
+
     <script src="app.js"></script>
     <script src="config.js"></script>
 
@@ -27,6 +30,7 @@
     <script src="controller/home.controller.client.js"></script>
     <script src="controller/search.controller.client.js"></script>
     <script src="controller/movie.controller.client.js"></script>
+    <script src="controller/userApprove.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
