--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -40,6 +40,7 @@
     <script src="controller/userApprove.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
+    <script src="service/address.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
 </head>
 <body>
