Updated Phone frontend

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -41,6 +41,7 @@
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
+    <script src="service/phone.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
 </head>
 <body>
