--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -31,6 +31,8 @@
     <script src="controller/search.controller.client.js"></script>
     <script src="controller/movie.controller.client.js"></script>
     <script src="controller/userApprove.controller.client.js"></script>
+    <script src="controller/movie-buy.controller.client.js"></script>
+    <script src="controller/user-inventory.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
