Updated All profile page for admin

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -40,6 +40,7 @@
     <script src="controller/userApprove.controller.client.js"></script>
     <script src="controller/movie-buy.controller.client.js"></script>
     <script src="controller/user-inventory.controller.client.js"></script>
+    <script src="controller/users.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
