--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -39,10 +39,14 @@
     <script src="controller/movie.controller.client.js"></script>
     <script src="controller/userApprove.controller.client.js"></script>
     <script src="controller/movie-buy.controller.client.js"></script>
+    <script src="controller/contactAdmin.controller.client.js"></script>
+    <script src="controller/address.controller.client.js"></script>
     <script src="controller/user-inventory.controller.client.js"></script>
+    <script src="controller/user-like.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
+    <script src="service/admin.service.client.js"></script>
     <script src="service/phone.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
 </head>
