Added moviewishlist adn movielike service

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -47,6 +47,8 @@
     <script src="controller/users.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
+    <script src="service/movieLike.service.client.js"></script>
+    <script src="service/movieWishlist.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
     <script src="service/admin.service.client.js"></script>
     <script src="service/phone.service.client.js"></script>
