Updated Wishlist page

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -44,6 +44,7 @@
     <script src="controller/address.controller.client.js"></script>
     <script src="controller/user-inventory.controller.client.js"></script>
     <script src="controller/user-like.controller.client.js"></script>
+    <script src="controller/user-wishlist.controller.client.js"></script>
     <script src="controller/users.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
