Updated Fav Seller service

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -51,6 +51,7 @@
     <script src="service/movie.service.client.js"></script>
     <script src="service/movieLike.service.client.js"></script>
     <script src="service/movieWishlist.service.client.js"></script>
+    <script src="service/favSeller.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
     <script src="service/admin.service.client.js"></script>
     <script src="service/phone.service.client.js"></script>
