movies bought sold

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -45,6 +45,8 @@
     <script src="controller/user-inventory.controller.client.js"></script>
     <script src="controller/user-like.controller.client.js"></script>
     <script src="controller/user-fav.controller.client.js"></script>
+    <script src="controller/user-bought.controller.client.js"></script>
+    <script src="controller/user-sold.controller.client.js"></script>
     <script src="controller/user-wishlist.controller.client.js"></script>
     <script src="controller/users.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
@@ -53,6 +55,7 @@
     <script src="service/movieWishlist.service.client.js"></script>
     <script src="service/favSeller.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
+    <script src="service/transaction.service.client.js"></script>
     <script src="service/admin.service.client.js"></script>
     <script src="service/phone.service.client.js"></script>
     <script src="service/api.service.client.js"></script>
