Added Seller review

--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -48,11 +48,13 @@
     <script src="controller/user-bought.controller.client.js"></script>
     <script src="controller/user-sold.controller.client.js"></script>
     <script src="controller/user-wishlist.controller.client.js"></script>
+    <script src="controller/user-review.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/movieLike.service.client.js"></script>
     <script src="service/movieWishlist.service.client.js"></script>
     <script src="service/movieReview.service.client.js"></script>
+    <script src="service/sellerReview.service.client.js"></script>
     <script src="service/favSeller.service.client.js"></script>
     <script src="service/address.service.client.js"></script>
     <script src="service/transaction.service.client.js"></script>
