--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -49,6 +49,8 @@
     <script src="controller/user-sold.controller.client.js"></script>
     <script src="controller/user-wishlist.controller.client.js"></script>
     <script src="controller/user-review.controller.client.js"></script>
+    <script src="controller/seller-review.controller.client.js"></script>
+    <script src="controller/buyer-review.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/movieLike.service.client.js"></script>
