--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -27,6 +27,8 @@
 
     <link href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css" rel="stylesheet">
     <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js"></script>
 
     <script src="app.js"></script>
     <script src="config.js"></script>
@@ -52,6 +54,7 @@
     <script src="controller/seller-review.controller.client.js"></script>
     <script src="controller/movie-review.controller.client.js"></script>
     <script src="controller/buyer-review.controller.client.js"></script>
+    <script src="controller/userEdit.controller.client.js"></script>
     <script src="service/user.service.client.js"></script>
     <script src="service/movie.service.client.js"></script>
     <script src="service/movieLike.service.client.js"></script>
