--- a/PhaseB/MovieOn/src/main/webapp/index.html
+++ b/PhaseB/MovieOn/src/main/webapp/index.html
@@ -39,6 +39,7 @@
     <script src="controller/home.controller.client.js"></script>
     <script src="controller/search.controller.client.js"></script>
     <script src="controller/movie.controller.client.js"></script>
+    <script src="controller/userContact.controller.client.js"></script>
     <script src="controller/phone.controller.client.js"></script>
     <script src="controller/userApprove.controller.client.js"></script>
     <script src="controller/movie-buy.controller.client.js"></script>
